--- a/portal/chat.html
+++ b/portal/chat.html
@@ -1539,82 +1539,79 @@ if (messagesInner) {
       const isAssistant = msg.role === "assistant";
       const row = document.createElement("div");
       row.className = "msg-row " + (isAssistant ? "other" : "me");
+      if (msg.id) {
+        row.dataset.id = msg.id;
+      }
 
       const wrap = document.createElement("div");
       wrap.className = "bubble-wrap";
-      wrap.dataset.id = msg.id;
+      if (msg.id) {
+        wrap.dataset.id = msg.id;
+      }
 
-      const toggle = document.createElement("button");
-      toggle.className = "bubble-menu-toggle";
-      toggle.type = "button";
-      toggle.textContent = "⋯";
-
+      // 말풍선 본문
       const bubble = document.createElement("div");
       bubble.className = "bubble " + (isAssistant ? "other" : "me");
       bubble.innerHTML = renderContent(msg.content || "");
 
-      // 첨부파일 렌더링
-      if (Array.isArray(msg.attachments) && msg.attachments.length > 0) {
+      // 첨부 처리
+      const attachments = Array.isArray(msg.attachments) ? msg.attachments : [];
+      if (attachments.length > 0) {
         bubble.classList.add("has-attachments");
-
-        const attachmentsWrap = document.createElement("div");
-        attachmentsWrap.className = "bubble-attachments";
-
-        msg.attachments.forEach((att) => {
-          if (!att) return;
-          const name = att.name || att.filename || att.url || "첨부파일";
-          const url = att.url || att.server_path || null;
-          const type = att.type || "";
-
-          const isImage =
-            (type && type.startsWith("image/")) ||
-            (name && /\.(png|jpe?g|webp|gif)$/i.test(name)) ||
-            (url && /\.(png|jpe?g|webp|gif)$/i.test(url));
-
-          const pill = document.createElement("button");
-          pill.type = "button";
-          pill.className = "bubble-attachment" + (isImage ? " image" : "");
-
-          if (isImage && url) {
-            const img = document.createElement("img");
-            img.src = url;
-            img.alt = name;
-            img.className = "bubble-attachment-thumb";
-            pill.appendChild(img);
-          } else {
-            const icon = document.createElement("span");
-            icon.className = "bubble-attachment-icon";
-            icon.textContent = isImage ? "🖼" : "📎";
-
-            const title = document.createElement("span");
-            title.className = "bubble-attachment-name";
-            title.textContent = truncateFileName(name);
-
-            pill.appendChild(icon);
-            pill.appendChild(title);
-          }
-
-          if (url) {
-            pill.addEventListener("click", () => {
-              if (isImage) {
-                openImageViewer(url);
-              } else {
-                window.open(url, "_blank");
-              }
-            });
-          }
-
-          attachmentsWrap.appendChild(pill);
-        });
-
-        bubble.appendChild(attachmentsWrap);
       }
 
+      const attachmentsBox = document.createElement("div");
+      attachmentsBox.className = "bubble-attachments";
+
+      attachments.forEach((att) => {
+        const isImage = (att.type && att.type.startsWith("image/")) ||
+          (att.url && /\.(png|jpe?g|webp|gif|heic)$/i.test(att.url));
+
+        const pill = document.createElement("button");
+        pill.type = "button";
+        pill.className = "bubble-attachment" + (isImage ? " image" : "");
+
+        if (isImage) {
+          const img = document.createElement("img");
+          img.className = "bubble-attachment-thumb";
+          img.src = att.url || att.server_path || "";
+          img.alt = att.name || "image";
+          pill.appendChild(img);
+
+          pill.addEventListener("click", () => {
+            const url = att.url || att.server_path || "";
+            if (url) {
+              openImageViewer(url);
+            }
+          });
+        } else {
+          const icon = document.createElement("span");
+          icon.className = "bubble-attachment-icon";
+          icon.textContent = "📎";
+
+          const nameSpan = document.createElement("span");
+          nameSpan.className = "bubble-attachment-name";
+          nameSpan.textContent = truncateFileName(att.name || "첨부파일");
+
+          pill.appendChild(icon);
+          pill.appendChild(nameSpan);
+
+          pill.addEventListener("click", () => {
+            if (att.url) {
+              window.open(att.url, "_blank");
+            }
+          });
+        }
+
+        attachmentsBox.appendChild(pill);
+      });
+
+      // 시간 메타
       const meta = document.createElement("div");
-      meta.className = "bubble-meta" + (isAssistant ? "" : " me");
+      meta.className = "bubble-meta";
       meta.textContent = formatTime(msg.timestamp);
 
-      // 말풍선 메뉴 생성
+      // 말풍선 메뉴 (롱프레스에서 열림)
       const menu = document.createElement("div");
       menu.className = "bubble-menu";
 
@@ -1626,23 +1623,44 @@ if (messagesInner) {
         menu.appendChild(btn);
       }
 
-      // 항상 복사
+      // 항상 복사 가능
       addMenuButton("copy", "복사");
 
-      // 내 메시지일 때만 수정/삭제
+      // 내 메시지일 때만 수정/삭제 제공
       if (!isAssistant) {
         addMenuButton("edit", "수정");
         addMenuButton("delete", "삭제");
       }
 
-      // 항상 기록
-      addMenuButton("pin", "기록");
+      // 항상 핀 기능 제공
+      addMenuButton("pin", "핀");
 
-      wrap.appendChild(toggle);
+      // 실패한 메시지면 재전송 버튼
+      if (msg.status === "error") {
+        const retry = document.createElement("button");
+        retry.type = "button";
+        retry.className = "retry-btn";
+        retry.textContent = "다시 보내기";
+        retry.addEventListener("click", () => {
+          // 재전송 로직은 기존 sendMessage 흐름을 그대로 사용하므로
+          // 단순히 입력창에 내용만 다시 넣어준다.
+          if (inputEl) {
+            inputEl.value = msg.content || "";
+            inputEl.focus();
+          }
+        });
+        wrap.appendChild(retry);
+      }
+
+      // 조립
       wrap.appendChild(bubble);
+      if (attachments.length > 0) {
+        wrap.appendChild(attachmentsBox);
+      }
       wrap.appendChild(meta);
       wrap.appendChild(menu);
       row.appendChild(wrap);
+
       return row;
     }
       wrap.dataset.id = msg.id;
@@ -1740,126 +1758,6 @@ if (messagesInner) {
 
       // 항상 기록
       addMenuButton("pin", "기록");
-
-      wrap.appendChild(toggle);
-      wrap.appendChild(bubble);
-      wrap.appendChild(meta);
-      wrap.appendChild(menu);
-      row.appendChild(wrap);
-      return row;
-
-      const row = document.createElement("div");
-      row.className = "msg-row " + (msg.role === "assistant" ? "other" : "me");
-
-      const wrap = document.createElement("div");
-      wrap.className = "bubble-wrap";
-      wrap.dataset.id = msg.id;
-
-      const toggle = document.createElement("button");
-      toggle.className = "bubble-menu-toggle";
-      toggle.type = "button";
-      toggle.textContent = "⋯";
-
-      const bubble = document.createElement("div");
-      bubble.className = "bubble " + (msg.role === "assistant" ? "other" : "me");
-      bubble.innerHTML = renderContent(msg.content);
-
-      if (Array.isArray(msg.attachments) && msg.attachments.length) {
-        bubble.classList.add("has-attachments");
-        const attWrap = document.createElement("div");
-        attWrap.className = "bubble-attachments";
-
-        msg.attachments.forEach((att) => {
-          const chip = document.createElement("div");
-
-          // kind / type / 파일 확장자를 기반으로 이미지 여부 판별
-          let kind = att.kind || "file";
-          const type = typeof att.type === "string" ? att.type : "";
-
-          // type이 비어 있으면 파일 이름 확장자로 추론
-          let ext = "";
-          if (att.name && typeof att.name === "string" && att.name.includes(".")) {
-            const parts = att.name.split(".");
-            ext = parts[parts.length - 1].toLowerCase();
-          }
-          const isExtImage = ["jpg", "jpeg", "png", "gif", "webp", "heic", "heif", "bmp"].includes(ext);
-
-          if (!att.kind) {
-            if (type.startsWith("image/") || (!type && isExtImage)) {
-              kind = "image";
-            } else if (type.startsWith("video/")) {
-              kind = "video";
-            } else {
-              kind = "file";
-            }
-          }
-
-          chip.className = "bubble-attachment";
-          if (kind === "image") {
-            chip.classList.add("image");
-          }
-
-          if (kind === "image" && att.url) {
-            // 이미지의 경우 말풍선 안에 썸네일 미리보기
-            const img = document.createElement("img");
-            img.className = "bubble-attachment-thumb";
-            img.src = att.url;
-            img.alt = att.name || "image";
-            // 클릭 시 새 탭으로 크게 보기
-            img.addEventListener("click", () => {
-              openImageViewer(att.url);
-            });
-            chip.appendChild(img);
-          } else {
-            // 그 외(파일/영상)는 아이콘 + 파일명 칩으로 표시
-            const icon = document.createElement("span");
-            icon.className = "bubble-attachment-icon";
-            icon.textContent =
-              kind === "image" ? "🖼" : kind === "video" ? "🎬" : "📎";
-
-            const label = document.createElement("span");
-            label.className = "bubble-attachment-name";
-            label.textContent = truncateFileName(att.name || "첨부파일");
-
-            chip.appendChild(icon);
-            chip.appendChild(label);
-          }
-
-          attWrap.appendChild(chip);
-        });
-
-        bubble.appendChild(attWrap);
-      }
-
-       const meta = document.createElement("div");
-      meta.className = "bubble-meta" + (msg.role === "assistant" ? "" : " me");
-      meta.textContent = formatTime(msg.timestamp);
-
-      // 말풍선 메뉴 생성
-      const menu = document.createElement("div");
-      menu.className = "bubble-menu";
-
-      function addMenuButton(action, label) {
-        const btn = document.createElement("button");
-        btn.type = "button";
-        btn.dataset.action = action;
-        btn.textContent = label;
-        menu.appendChild(btn);
-      }
-
-      // 항상 복사 버튼
-      addMenuButton("copy", "복사");
-
-      // 내 메시지일 때만 수정/삭제
-      if (msg.role !== "assistant") {
-        addMenuButton("edit", "수정");
-        addMenuButton("delete", "삭제");
-      }
-
-      // 항상 기록 버튼
-      addMenuButton("pin", "기록");
-
-      // 필요하면 나중에 'history' 같은 추가 액션도 여기서 addMenuButton으로 더 붙이면 됨
 
       wrap.appendChild(toggle);
       wrap.appendChild(bubble);
