--- a/portal/chat.html
+++ b/portal/chat.html
@@ -1525,7 +1525,7 @@ if (messagesInner) {
       }
     }
 
-    function buildMessageRowElement(msg) {
+        function buildMessageRowElement(msg) {
       // 시스템 역할 메시지는 타임라인 구분선으로 렌더링
       if (msg.role === "system") {
         const div = document.createElement("div");
@@ -1564,8 +1564,11 @@ if (messagesInner) {
       attachmentsBox.className = "bubble-attachments";
 
       attachments.forEach((att) => {
-        const isImage = (att.type && att.type.startsWith("image/")) ||
-          (att.url && /\.(png|jpe?g|webp|gif|heic)$/i.test(att.url));
+        if (!att) return;
+        const isImage =
+          (att.type && att.type.startsWith("image/")) ||
+          (att.url && /\.(png|jpe?g|webp|gif|heic)$/i.test(att.url)) ||
+          (att.name && /\.(png|jpe?g|webp|gif|heic)$/i.test(att.name));
 
         const pill = document.createElement("button");
         pill.type = "button";
@@ -1608,7 +1611,7 @@ if (messagesInner) {
 
       // 시간 메타
       const meta = document.createElement("div");
-      meta.className = "bubble-meta";
+      meta.className = "bubble-meta" + (isAssistant ? "" : " me");
       meta.textContent = formatTime(msg.timestamp);
 
       // 말풍선 메뉴 (롱프레스에서 열림)
@@ -1633,7 +1636,7 @@ if (messagesInner) {
       }
 
       // 항상 핀 기능 제공
-      addMenuButton("pin", "핀");
+      addMenuButton("pin", "기록");
 
       // 실패한 메시지면 재전송 버튼
       if (msg.status === "error") {
@@ -1642,8 +1645,6 @@ if (messagesInner) {
         retry.className = "retry-btn";
         retry.textContent = "다시 보내기";
         retry.addEventListener("click", () => {
-          // 재전송 로직은 기존 sendMessage 흐름을 그대로 사용하므로
-          // 단순히 입력창에 내용만 다시 넣어준다.
           if (inputEl) {
             inputEl.value = msg.content || "";
             inputEl.focus();
@@ -1663,108 +1664,6 @@ if (messagesInner) {
 
       return row;
     }
-      wrap.dataset.id = msg.id;
-
-      const toggle = document.createElement("button");
-      toggle.className = "bubble-menu-toggle";
-      toggle.type = "button";
-      toggle.textContent = "⋯";
-
-      const bubble = document.createElement("div");
-      bubble.className = "bubble " + (isAssistant ? "other" : "me");
-      bubble.innerHTML = renderContent(msg.content || "");
-
-      // 첨부파일 렌더링
-      if (Array.isArray(msg.attachments) && msg.attachments.length > 0) {
-        bubble.classList.add("has-attachments");
-
-        const attachmentsWrap = document.createElement("div");
-        attachmentsWrap.className = "bubble-attachments";
-
-        msg.attachments.forEach((att) => {
-          if (!att) return;
-          const name = att.name || att.filename || att.url || "첨부파일";
-          const url = att.url || att.server_path || null;
-          const type = att.type || "";
-
-          const isImage =
-            (type && type.startsWith("image/")) ||
-            (name && /\.(png|jpe?g|webp|gif)$/i.test(name)) ||
-            (url && /\.(png|jpe?g|webp|gif)$/i.test(url));
-
-          const pill = document.createElement("button");
-          pill.type = "button";
-          pill.className = "bubble-attachment" + (isImage ? " image" : "");
-
-          if (isImage && url) {
-            const img = document.createElement("img");
-            img.src = url;
-            img.alt = name;
-            img.className = "bubble-attachment-thumb";
-            pill.appendChild(img);
-          } else {
-            const icon = document.createElement("span");
-            icon.className = "bubble-attachment-icon";
-            icon.textContent = isImage ? "🖼" : "📎";
-
-            const title = document.createElement("span");
-            title.className = "bubble-attachment-name";
-            title.textContent = truncateFileName(name);
-
-            pill.appendChild(icon);
-            pill.appendChild(title);
-          }
-
-          if (url) {
-            pill.addEventListener("click", () => {
-              if (isImage) {
-                openImageViewer(url);
-              } else {
-                window.open(url, "_blank");
-              }
-            });
-          }
-
-          attachmentsWrap.appendChild(pill);
-        });
-
-        bubble.appendChild(attachmentsWrap);
-      }
-
-      const meta = document.createElement("div");
-      meta.className = "bubble-meta" + (isAssistant ? "" : " me");
-      meta.textContent = formatTime(msg.timestamp);
-
-      // 말풍선 메뉴 생성
-      const menu = document.createElement("div");
-      menu.className = "bubble-menu";
-
-      function addMenuButton(action, label) {
-        const btn = document.createElement("button");
-        btn.type = "button";
-        btn.dataset.action = action;
-        btn.textContent = label;
-        menu.appendChild(btn);
-      }
-
-      // 항상 복사
-      addMenuButton("copy", "복사");
-
-      // 내 메시지일 때만 수정/삭제
-      if (!isAssistant) {
-        addMenuButton("edit", "수정");
-        addMenuButton("delete", "삭제");
-      }
-
-      // 항상 기록
-      addMenuButton("pin", "기록");
-
-      wrap.appendChild(toggle);
-      wrap.appendChild(bubble);
-      wrap.appendChild(meta);
-      wrap.appendChild(menu);
-      row.appendChild(wrap);
-      return row;
 
     function markMessageAsFailed(msgId) {
       if (!msgId) return;
